k8s/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: django-web-app
spec:
  selector:
    app: django-web-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
  type: NodePort  # Use LoadBalancer on cloud platforms
